<resources>
    <string name="app_name">GroupHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Mina">Mina_pic</string>
    <string name="profile_username">Username</string>
    <string name="profile_page">Profile Page</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_desc_text">Profile Personal Description</string>
    <string name="edit">Edit</string>
    <string name="contact_information_text">Contact Information</string>
    <string name="group_list">View Joined Groups</string>
    <string name="save">Save</string>

    <string name="joined_groups">Your Joined Groups</string>
    <string name="back">Return</string>

    <string name="change_photo">Change photo</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="current_username">Current Username</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="group_description">Group Description</string>
    <string name="group_members_list">Group Members List</string>
    <string name="view">View</string>
    <string name="group_page">Group Page</string>


    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account_click_here">Don\'t have an account? Click here.</string>
    <string name="sign_up" />
    <string name="already_have_an_account_click_here" />
    <string name="groupname">groupname</string>
    <string name="description">description\n\n\n</string>
</resources>