<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="Username"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="Phone Number"
        android:ems="10"
        android:hint="Phone Number"
        android:inputType="phone" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#ebe5a4"
        android:text="@string/sign_up"
        android:hint="SIGN UP"
        android:textColor="#000000"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/already_have_an_account_click_here"
        android:hint="Already have an account? Click here."
        android:textColor="#0000FF"
        android:textSize="16sp" />

</LinearLayout>
