<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_buttons"
        android:text="@string/change_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_username" />

    <Button
        android:id="@+id/change_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_buttons"
        android:text="@string/change_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_username"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/change_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/change_photo"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profile_picture"
        app:layout_constraintStart_toStartOf="@+id/profile_picture"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_username"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/current_username"
        app:layout_constraintEnd_toEndOf="@+id/current_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/current_username" />

    <TextView
        android:id="@+id/current_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/current_username"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_picture" />

    <ImageButton
        android:id="@+id/return_to_main"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
        app:layout_constraintEnd_toStartOf="@+id/profile_outline"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <Button
        android:id="@+id/save_changes"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_buttons"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_outline"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="478dp"
        android:contentDescription="@string/Mina"
        android:src="@drawable/mina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_barrier"
        app:layout_constraintVertical_bias="1" />

    <View
        android:id="@+id/top_barrier"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="102dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <View
        android:id="@+id/profile_barrier"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/current_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_picture"
        app:layout_constraintVertical_bias="0.36" />

    <FrameLayout
        android:id="@+id/profile_outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline"
        app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <FrameLayout
            android:id="@+id/profile_frame"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_buttons"
            app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
            app:layout_constraintEnd_toEndOf="@+id/top_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/edit_profile"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </FrameLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>