<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageButton
        android:id="@+id/return_to_main"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
        app:layout_constraintEnd_toStartOf="@+id/profile_outline"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <FrameLayout
        android:id="@+id/profile_outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline"
        app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <FrameLayout
            android:id="@+id/profile_frame"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_buttons"
            app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
            app:layout_constraintEnd_toEndOf="@+id/top_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/change_password"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </FrameLayout>
    </FrameLayout>

    <View
        android:id="@+id/top_barrier"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="102dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <EditText
        android:id="@+id/current_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="304dp"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/current_password" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/update_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/update_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="221dp"
        android:backgroundTint="#ebe5a4"
        android:hint="Update Password"
        android:text="@string/sign_up"
        android:textColor="#000000"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>
