<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/leave_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_buttons"
        android:text="leave group"

        app:layout_constraintBottom_toBottomOf="@+id/current_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/current_username" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Group Name"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/current_username"
        app:layout_constraintEnd_toEndOf="@+id/current_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/current_username" />

    <TextView
        android:id="@+id/current_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Funny Group Name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <ImageButton
        android:id="@+id/return_to_main"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
        app:layout_constraintEnd_toStartOf="@+id/profile_outline"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="478dp"
        android:contentDescription="@string/Mina"
        android:src="@drawable/mina"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_barrier"
        app:layout_constraintVertical_bias="1" />

    <View
        android:id="@+id/top_barrier"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginTop="102dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <View
        android:id="@+id/profile_barrier"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/current_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        app:layout_constraintVertical_bias="0.36" />

    <FrameLayout
        android:id="@+id/profile_outline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/outline"
        app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <FrameLayout
            android:id="@+id/profile_frame"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_buttons"
            app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
            app:layout_constraintEnd_toEndOf="@+id/top_barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_page"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/group_page"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </FrameLayout>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_username"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:id="@+id/personal_desc_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/personal_desc_frame"
                android:layout_width="375dp"
                android:layout_height="125dp"
                android:background="@drawable/rounded_buttons"
                app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
                app:layout_constraintEnd_toEndOf="@+id/top_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/personal_desc_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/group_description"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </FrameLayout>

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <FrameLayout
            android:id="@+id/contact_information_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/outline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/contact_information_frame"
                android:layout_width="375dp"
                android:layout_height="125dp"
                android:background="@drawable/rounded_buttons"
                app:layout_constraintBottom_toBottomOf="@+id/top_barrier"
                app:layout_constraintEnd_toEndOf="@+id/top_barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/contact_information_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/group_members_list"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </FrameLayout>

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>